[tool.poetry]
name = "redirect-echo"
version = "0.1.0"
description = ""
authors = ["Dino Hensen <dino.hensen@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
sanic = "^21.6.2"

[tool.poetry.dev-dependencies]
yapf = "^0.31.0"
pylint = "^2.9.6"
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
